Started styling the cards, images linked but still some to convert, template literal inline functions are cool! Also, fixed gridControl z-index!

--- a/style.css
+++ b/style.css
@@ -279,10 +279,49 @@ html {
         div[data-name^="c"] {
           aspect-ratio: 1/1;
           padding: 5px;
+          font-family: "Raleway", sans-serif;
           div {
             border-radius: 10px;
             height: 100%;
             width: 100%;
+            box-shadow: 0px 0px 3px black inset;
+            img {
+              border-top-right-radius: 5px;
+              border-top-left-radius: 5px;
+              width: 100%;
+              height: 50%;
+              object-fit: cover;
+              object-position: top;
+              overflow: clip;
+            }
+            div {
+              border-top-right-radius: 0;
+              border-top-left-radius: 0;
+              border-bottom-right-radius: 5px;
+              border-bottom-left-radius: 5px;
+              height: 50%;
+              border: none;
+              h2 {
+                margin: 3px;
+                position: relative;
+              }
+              h2::after {
+                content: "";
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: -2px;
+                height: 2px;
+                width: 80%;
+                mask-image: linear-gradient(
+                  to right,
+                  transparent,
+                  white,
+                  white,
+                  transparent
+                );
+              }
+            }
           }
         }
         .E {
@@ -293,12 +332,25 @@ html {
               var(--blue)
             );
             border: 5px outset hsl(33, 35%, 78%);
+            color: white;
+            div {
+              border-top: 3px solid hsl(33, 35%, 78%) !important;
+              h2::after {
+                background: hsl(33, 35%, 78%);
+              }
+            }
           }
         }
         .R {
           div {
             background: linear-gradient(to bottom, white, rgb(179, 179, 179));
-            border: 5px outset rgb(209, 208, 219);
+            border: 5px outset rgb(26, 26, 26);
+            div {
+              border-top: 3px solid rgb(26, 26, 26) !important;
+              h2::after {
+                background-color: rgb(26, 26, 26);
+              }
+            }
           }
         }
         .gridControl {
@@ -314,6 +366,7 @@ html {
           margin-bottom: 5px;
           font-family: "Julius Sans One", sans-serif;
           box-shadow: 0px 0px 8px var(--blue), 0px 0px 8px var(--blue);
+          z-index: 5;
           .search {
             display: flex;
             justify-content: center;
